--- a/main.tex
+++ b/main.tex
@@ -76,39 +76,47 @@ Well versed multi-paradigm developer, with deep understanding of Purely Function
 
 \definecolor{lightblue}{rgb}{0.22,0.45,0.70}
 
-\cvitem{Nested Routes}{Sinatra-like library for high-performance web applications in Haskell.
-            \textcolor{lightblue}{http://hackage.haskell.org/package/nested-routes}}
-\cvitem{FrankenScript}{Augments JavaScript with strong typing and partial application. \textcolor{lightblue}{https://github.com/athanclark/frankenscript}}
-\cvitem{WebPage}{Scaffold for Html5/Css3 web applications, much like WordPress' theme system. \textcolor{lightblue}{http://hackage.haskell.org/package/webpage}}
-\cvitem{Markup}{Generalizes Html nodes by what they represent, agnostic from their machinery. \textcolor{lightblue}{http://hackage.haskell.org/package/markup}}
-\cvitem{UrlPath}{URLs are abstracted to their relative or absolute counterparts, automating the
-                 migration of an app. \textcolor{lightblue}{http://hackage.haskell.org/package/urlpath}}
-\cvitem{DAG}{Compile-time directed acyclic graphs, leveraging advanced Type-Level programming
-             to facilitate acyclic safety. \textcolor{lightblue}{http://hackage.haskell.org/package/dag}}
-\cvitem{Pred-Trie}{Predicative look-up tables. \textcolor{lightblue}{http://hackage.haskell.org/package/pred-trie}}
+\cvitem{\(\lambda\)text}{Command-line utility for general purpose templating.
+                        \textcolor{lightblue}{\href{http://ltext.github.io}{ltext.github.io}}}
+\cvitem{Nested Routes}{Sinatra-style web application library.
+                      \textcolor{lightblue}{\href{http://hackage.haskell.org/package/nested-routes}{hackage/nested-routes}}}
+\cvitem{FrankenScript}{JavaScript with strong typing and partial application.
+                      \textcolor{lightblue}{\href{https://github.com/athanclark/frankenscript}{github/frankenscript}}}
+\cvitem{WebPage}{Web application scaffold, designed after WordPress.
+                \textcolor{lightblue}{\href{http://hackage.haskell.org/package/webpage}{hackage/webpage}}}
+\cvitem{Markup}{Generic programming for Html.
+               \textcolor{lightblue}{\href{http://hackage.haskell.org/package/markup}{hackage/markup}}}
+\cvitem{UrlPath}{URL data type, specialized for app deployment.
+                \textcolor{lightblue}{\href{http://hackage.haskell.org/package/urlpath}{hackage/urlpath}}}
+\cvitem{DAG}{Directed acyclic graph data structure, with compile-time safety.
+            \textcolor{lightblue}{\href{http://hackage.haskell.org/package/dag}{hackage/dag}}}
+\cvitem{Pred-Trie}{Look-up tables with predicates.
+                  \textcolor{lightblue}{\href{http://hackage.haskell.org/package/pred-trie}{hackage/pred-trie}}}
 
-%\pagebreak
+% \pagebreak
 
 \section{Programming Languages}
 
-\cvitem{JavaScript}{Node.js, jQuery, LoDash, AngularJS, React, Backbone, Require.js, Bower, Gulp, Grunt, Jade.}
-\cvitem{CSS}{Sass, Less, Stylus, PostCSS, OOCSS, SMACSS, Foundation, Bootstrap, Semantic UI.}
-\cvitem{PHP}{Symfony, Laravel, Composer, PEAR, Smarty.}
-\cvitem{Ruby}{Ruby on Rails, Sinatra, Haml.}
-\cvitem{Haskell}{Yesod, Scotty, Snap, Nested-Routes, Lens, Pandoc, HXT.}
+\cvitem{JavaScript}{AngularJS, jQuery, LoDash, Backbone, RequireJS, Bower, Grunt, Jade}
+\cvitem{CSS}{Sass, Less, Bootstrap, Foundation, Semantic UI, Polymer}
+\cvitem{PHP}{Symfony, Laravel, Composer, PEAR, Smarty}
+\cvitem{Ruby}{Ruby on Rails, Sinatra, Haml}
+\cvitem{Haskell}{Yesod, Scotty, Snap, Nested-Routes, Lens, Pandoc, HXT}
+
+\pagebreak
 
 \section{Technical Skills}
 
-\subsection{Development}
-\cvitem{Administration}{Installation \& Configuration, Kernel Compilation, Hardware Optimization \& Troubleshooting}
-\cvitem{Tools}{Make \& Autotools; Gulp, Grunt, Bower, NPM, PEAR, Composer \& Cabal; Git, Darcs, Cvs; Vim, Atom}
-\cvitem{Distributions}{Ubuntu/Debian, Red Hat/Fedora, Gentoo, NixOS, FreeBSD}
-
 \subsection{Principals}
-\cvitem{Assurance}{Unit / Automated Testing, Property Establishment, Type Systems for absolute correctness. Isolated Sandboxes, Reproducible Development - Docker, Nix.}
-\cvitem{Performance}{Profiling, Complexity and Asymptotic Analysis, Web Developer Tools.}
-\cvitem{Availability}{Browser-Bug Compensation and Evasion, Backward and Forward Compatibility, and Search Engine Optimization.}
-\cvitem{Code Clarity}{Beautiful Code, Loose Coupling, Design Patterns.}
+\cvitem{Assurance}{Unit / Automated Testing, Property Establishment, Absolute Correctness, Isolation, Reproducible Development - Docker, Nix}
+\cvitem{Performance}{Profiling, Complexity, Asymptotic Analysis, Web Developer Tools}
+\cvitem{Availability}{Browser-Bug Compensation and Evasion, Backward and Forward Compatibility, Search Engine Optimization}
+\cvitem{Code Clarity}{Beautiful Code, Loose Coupling, Design Patterns}
+
+\subsection{Development}
+\cvitem{Administration}{Installation, Configuration, Hardware Optimization, Troubleshooting}
+\cvitem{Tools}{Make, Autotools, Gulp, Grunt, Bower, NPM, PEAR, Composer, Cabal, Git}
+\cvitem{Distributions}{Ubuntu/Debian, Red Hat/Fedora, Gentoo, NixOS, FreeBSD}
 
 %\subsection{Active Research}
 %\cvitem{PureScript}{Purely-functional programming language that compiles to JavaScript - it is based on Haskell, with improvements.}
@@ -116,21 +124,19 @@ Well versed multi-paradigm developer, with deep understanding of Purely Function
 %\cvitem{Agda}{A beautiful dependently-typed programming language and theorem prover, similar to Haskell.}
 %\cvitem{Coq}{A proof assistant and dependently-typed programming language. Famous for finding over 200 bugs in GCC.}
 
-%\pagebreak
-
 \section{Past Positions}
 \cvitem{American Financing\\\textbf{\footnotesize 11/14 - 1/15}}{
-Upgraded their legacy PHP and Ruby codebase to a unified Haskell web application -
-visually a mirror image of the previous (with semantic improvements to the HTML),
-while compensating for historic URLs for proper redirection for SEO concerns.
+Upgraded legacy PHP and Ruby codebase to a Haskell web application -
+a mirror image of the previous (with improvements to the HTML),
+while compensating for historic URLs for SEO.
 }
 \cvitem{Peerless Network\\\textbf{\footnotesize 11/13 - 5/14}}{
-Developed command-line applications for the Network Operations Center to maximize
-the throughput of their help-desk.
+Developed command-line applications for Network Operations Center to maximize
+throughput of their help-desk.
 }
 \cvitem{Kifaru Outdoors\\\textbf{\footnotesize 10/13 - 11/13}}{
-Emergency web application - an iTunes clone for smart-phones, but accessible from the web -
-to allow control of the song playing from the dance floor, remotely throughout the building.
+Emergency web application - an iTunes clone for smart-phones, accessible from the wifi -
+allow control of the song playing remotely throughout the building.
 }
 
 \section{References}
