--- a/main.tex
+++ b/main.tex
@@ -47,10 +47,10 @@
 \familyname{Clark} % Your last name
 
 % All information in this block is optional, comment out any lines you don't need
-\title{Curriculum Vitae}
+\title{Curriculum Vit\ae}
 % \address{15208 W. Ellsworth Dr.}{Golden, Colorado 80401}
-\mobile{(970) 799 - 9167}
-\email{athan@deconfigured.com}
+\mobile{(303) 884 - 7762}
+\email{athan.clark@gmail.com}
 \homepage{deconfigured.com}{http://deconfigured.com}
 
 
@@ -72,26 +72,42 @@ highly skilled in complexity management, rapid development and formal correctnes
 Well versed multi-paradigm developer, with deep understanding of Purely Functional and Object Oriented design.
 % Research in advanced type systems, automated theorem proving, and high-performance GPU and Cluster computing.
 
-\section{Published Projects}
+\section{Authored Projects}
 
 \definecolor{lightblue}{rgb}{0.22,0.45,0.70}
 
-\cvitem{\(\lambda\)text}{Command-line utility for general purpose templating.
-                        \textcolor{lightblue}{\href{http://ltext.github.io}{ltext.github.io}}}
-\cvitem{Nested Routes}{Sinatra-style web application library.
-                      \textcolor{lightblue}{\href{http://hackage.haskell.org/package/nested-routes}{hackage/nested-routes}}}
-\cvitem{FrankenScript}{JavaScript with strong typing and partial application.
-                      \textcolor{lightblue}{\href{https://github.com/athanclark/frankenscript}{github/frankenscript}}}
-\cvitem{WebPage}{Web application scaffold, designed after WordPress.
-                \textcolor{lightblue}{\href{http://hackage.haskell.org/package/webpage}{hackage/webpage}}}
-\cvitem{Markup}{Generic programming for Html.
-               \textcolor{lightblue}{\href{http://hackage.haskell.org/package/markup}{hackage/markup}}}
-\cvitem{UrlPath}{URL data type, specialized for app deployment.
-                \textcolor{lightblue}{\href{http://hackage.haskell.org/package/urlpath}{hackage/urlpath}}}
-\cvitem{DAG}{Directed acyclic graph data structure, with compile-time safety.
-            \textcolor{lightblue}{\href{http://hackage.haskell.org/package/dag}{hackage/dag}}}
-\cvitem{Pred-Trie}{Look-up tables with predicates.
-                  \textcolor{lightblue}{\href{http://hackage.haskell.org/package/pred-trie}{hackage/pred-trie}}}
+\cvitem{\(\lambda\)text}{
+    Command-line utility for general purpose templating.
+    \hfill \textcolor{lightblue}{\href{http://ltext.github.io}{ltext.github.io}}
+  }
+\cvitem{Nested Routes}{
+    Sinatra-style web application library.
+    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/nested-routes}{hackage/nested-routes}}
+  }
+\cvitem{Pred-Trie}{
+    Look-up tables via predicates.
+    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/pred-trie}{hackage/pred-trie}}
+  }
+\cvitem{FrankenScript}{
+    JavaScript with strong typing and partial application.
+    \hfill \textcolor{lightblue}{\href{https://github.com/athanclark/frankenscript}{github/frankenscript}}
+  }
+\cvitem{WebPage}{
+    Web application scaffold, designed after WordPress.
+    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/webpage}{hackage/webpage}}
+  }
+\cvitem{Markup}{
+    Generic programming for Html.
+    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/markup}{hackage/markup}}
+  }
+\cvitem{UrlPath}{
+    URL data type, specialized for app deployment.
+    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/urlpath}{hackage/urlpath}}
+  }
+\cvitem{DAG}{
+    A type-safe, directed acyclic graph data structure.
+    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/dag}{hackage/dag}}
+  }
 
 % \pagebreak
 
