up to date with blog

--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,7 @@
 % \address{15208 W. Ellsworth Dr.}{Golden, Colorado 80401}
 \mobile{(303) 884 - 7762}
 \email{athan.clark@gmail.com}
-\homepage{deconfigured.com}{http://deconfigured.com}
+\homepage{http://athanclark.github.io}{athanclark.github.io}
 
 
 %----------------------------------------------------------------------------------------
