--- a/main.tex
+++ b/main.tex
@@ -66,23 +66,27 @@
 
 \section{Profile}
 
-Front-end and Back-end web developer, software engineer, system administrator and computer scientist.
-Focused, tactical and result-oriented -
-highly skilled in complexity management, rapid development and formal correctness.
-Well versed multi-paradigm developer, with deep understanding of Purely Functional and Object Oriented design.
-% Research in advanced type systems, automated theorem proving, and high-performance GPU and Cluster computing.
+Front and Back-end web application developer, software engineer, system administrator,
+and computer scientist. Focused, tactical, and results-oriented -
+skilled in complexity management, rapid development, and formal correctness.
+Well versed multi-paradigm developer, with deep understanding of Functional Programming
+and Object Oriented design.
 
 \section{Authored Projects}
 
 \definecolor{lightblue}{rgb}{0.22,0.45,0.70}
 
+\cvitem{Nested Routes}{
+    Sinatra-style web application library.
+    \hfill \textcolor{lightblue}{\href{https://nestedroutes.com}{nestedroutes.com}}
+  }
 \cvitem{\(\lambda\)text}{
     Command-line utility for general purpose templating.
     \hfill \textcolor{lightblue}{\href{http://ltext.github.io}{ltext.github.io}}
   }
-\cvitem{Nested Routes}{
-    Sinatra-style web application library.
-    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/nested-routes}{hackage/nested-routes}}
+\cvitem{Time-Map}{
+    Time-indexed map data structure.
+    \hfill \textcolor{lightblue}{\href{https//github.com/athanclark/timemap}{github/timemap}}
   }
 \cvitem{Pred-Trie}{
     Look-up tables via predicates.
@@ -92,10 +96,6 @@ Well versed multi-paradigm developer, with deep understanding of Purely Function
     JavaScript with strong typing and partial application.
     \hfill \textcolor{lightblue}{\href{https://github.com/athanclark/frankenscript}{github/frankenscript}}
   }
-\cvitem{WebPage}{
-    Web application scaffold, designed after WordPress.
-    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/webpage}{hackage/webpage}}
-  }
 \cvitem{Markup}{
     Generic programming for Html.
     \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/markup}{hackage/markup}}
@@ -104,9 +104,13 @@ Well versed multi-paradigm developer, with deep understanding of Purely Function
     URL data type, specialized for app deployment.
     \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/urlpath}{hackage/urlpath}}
   }
-\cvitem{DAG}{
-    A type-safe, directed acyclic graph data structure.
-    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/dag}{hackage/dag}}
+\cvitem{WebPage}{
+    Web application scaffold, designed like WordPress.
+    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/webpage}{hackage/webpage}}
+  }
+\cvitem{Wai-Session-Alt}{
+    Session Middleware for WAI.
+    \hfill \textcolor{lightblue}{\href{https://github.com/athanclark/wai-session-alt}{github/wai-session-alt}}
   }
 
 % \pagebreak
@@ -124,13 +128,13 @@ Well versed multi-paradigm developer, with deep understanding of Purely Function
 \section{Technical Skills}
 
 \subsection{Principals}
-\cvitem{Assurance}{Unit / Automated Testing, Property Establishment, Absolute Correctness, Isolation, Reproducible Development - Docker, Nix}
+\cvitem{Assurance}{Unit and Automated Testing, Property Establishment, Absolute Correctness, Isolation, Reproducible Development - Docker, Nix}
 \cvitem{Performance}{Profiling, Complexity, Asymptotic Analysis, Web Developer Tools}
-\cvitem{Availability}{Browser-Bug Compensation and Evasion, Backward and Forward Compatibility, Search Engine Optimization}
+\cvitem{Availability}{Browser-Bug Compensation, Backward and Forward Compatibility, Search Engine Optimization}
 \cvitem{Code Clarity}{Beautiful Code, Loose Coupling, Design Patterns}
 
 \subsection{Development}
-\cvitem{Administration}{Installation, Configuration, Hardware Optimization, Troubleshooting}
+\cvitem{Administration}{Compilation, Configuration, Hardware Optimization, Troubleshooting}
 \cvitem{Tools}{Make, Autotools, Gulp, Grunt, Bower, NPM, PEAR, Composer, Cabal, Git}
 \cvitem{Distributions}{Ubuntu/Debian, Red Hat/Fedora, Gentoo, NixOS, FreeBSD}
 
@@ -141,6 +145,11 @@ Well versed multi-paradigm developer, with deep understanding of Purely Function
 %\cvitem{Coq}{A proof assistant and dependently-typed programming language. Famous for finding over 200 bugs in GCC.}
 
 \section{Past Positions}
+\cvitem{FP Complete\\\textbf{\footnotesize 9/15 - 11/15}}{
+Added a generic, yet semantically pure security system for nested-routes; simple
+authentication-role based declarations, with the capacity to integrate into any
+existing security system.
+}
 \cvitem{American Financing\\\textbf{\footnotesize 11/14 - 1/15}}{
 Upgraded legacy PHP and Ruby codebase to a Haskell web application -
 a mirror image of the previous (with improvements to the HTML),
@@ -160,38 +169,38 @@ allow control of the song playing remotely throughout the building.
 % Please contact me for references.
 
 \center{
-\begin{multicols}{2}
-\begin{minipage}{\columnwidth}
-\center{
-\underline{Isaac Shapira}\\
-Web Development Colleague \& Student\\
-\textbf{\mobilesymbol (720) 402 - 0211}
-}
-\end{minipage}
-\begin{minipage}{\columnwidth}
-\center{
-\vspace{5mm}
-\underline{Tom Smith}\\
-Colleague \& Peer\\
-\textbf{\mobilesymbol (605) 415 - 7837}
-}
-\end{minipage}
-\begin{minipage}{\columnwidth}
-\center{
-\underline{Robert Glover}\\
-Mathematics \& Programming Student\\
-\textbf{\mobilesymbol (720) 272 - 3378}
-}
-\end{minipage}
-\begin{minipage}{\columnwidth}
-\center{
-\vspace{5mm}
-\underline{JayR McMahon}\\
-Employer for small Web Application\\
-\textbf{\mobilesymbol (720) 447 - 2219}
-}
-\end{minipage}
-\end{multicols}
+%\begin{multicols}{2}
+%\begin{minipage}{\columnwidth}
+%\center{
+%\underline{Isaac Shapira}\\
+%Web Development Colleague \& Student\\
+%\textbf{\mobilesymbol (720) 402 - 0211}
+%}
+%\end{minipage}
+%\begin{minipage}{\columnwidth}
+%\center{
+%\underline{Tom Smith}\\
+%Colleague \& Peer\\
+%\textbf{\mobilesymbol (605) 415 - 7837}
+%}
+%\end{minipage}
+%\begin{minipage}{\columnwidth}
+%\center{
+%\underline{Robert Glover}\\
+%Mathematics \& Programming Student\\
+%\textbf{\mobilesymbol (720) 272 - 3378}
+%}
+%\end{minipage}
+%\begin{minipage}{\columnwidth}
+%\center{
+%\vspace{5mm}
+%\underline{JayR McMahon}\\
+%Employer for small Web Application\\
+%\textbf{\mobilesymbol (720) 447 - 2219}
+%}
+%\end{minipage}
+%\end{multicols}
+Please contact me for references
 }
 
 % %----------------------------------------------------------------------------------------
