--- a/main.tex
+++ b/main.tex
@@ -67,10 +67,9 @@
 \section{Profile}
 
 Front and Back-end web application developer, software engineer, system administrator,
-and computer scientist. Focused, tactical, and results-oriented -
-skilled in complexity management, rapid development, and formal correctness.
-Well versed multi-paradigm developer, with deep understanding of Functional Programming
-and Object Oriented design.
+and amature computer scientist.
+Proficient in complexity management, rapid development, and verified correctness.
+Well versed multi-paradigm developer, with deep understanding of Functional Programming.
 
 \section{Authored Projects}
 
@@ -108,19 +107,14 @@ and Object Oriented design.
     Web application scaffold, designed like WordPress.
     \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/webpage}{hackage/webpage}}
   }
-\cvitem{Wai-Session-Alt}{
-    Session Middleware for WAI.
-    \hfill \textcolor{lightblue}{\href{https://github.com/athanclark/wai-session-alt}{github/wai-session-alt}}
-  }
 
 % \pagebreak
 
 \section{Programming Languages}
 
-\cvitem{JavaScript}{AngularJS, jQuery, LoDash, Backbone, RequireJS, Bower, Grunt, Jade}
-\cvitem{CSS}{Sass, Less, Bootstrap, Foundation, Semantic UI, Polymer}
-\cvitem{PHP}{Symfony, Laravel, Composer, PEAR, Smarty}
-\cvitem{Ruby}{Ruby on Rails, Sinatra, Haml}
+\cvitem{JavaScript}{jQuery, LoDash, Backbone, Browserify, Bower, Gulp}
+\cvitem{CSS}{Sass / Less / CSSModules, Bootstrap, Foundation, Semantic UI}
+\cvitem{PHP}{Symfony, Laravel, Composer, PEAR}
 \cvitem{Haskell}{Yesod, Scotty, Snap, Nested-Routes, Lens, Pandoc, HXT}
 
 \pagebreak
@@ -131,12 +125,11 @@ and Object Oriented design.
 \cvitem{Assurance}{Unit and Automated Testing, Property Establishment, Absolute Correctness, Isolation, Reproducible Development - Docker, Nix}
 \cvitem{Performance}{Profiling, Complexity, Asymptotic Analysis, Web Developer Tools}
 \cvitem{Availability}{Browser-Bug Compensation, Backward and Forward Compatibility, Search Engine Optimization}
-\cvitem{Code Clarity}{Beautiful Code, Loose Coupling, Design Patterns}
+\cvitem{Code Clarity}{Semantic Design, Loose Coupling, Design Patterns}
 
-\subsection{Development}
-\cvitem{Administration}{Compilation, Configuration, Hardware Optimization, Troubleshooting}
-\cvitem{Tools}{Make, Autotools, Gulp, Grunt, Bower, NPM, PEAR, Composer, Cabal, Git}
-\cvitem{Distributions}{Ubuntu/Debian, Red Hat/Fedora, Gentoo, NixOS, FreeBSD}
+%\subsection{Development}
+%\cvitem{Administration}{Compilation, Configuration, Hardware Optimization, Troubleshooting}
+%\cvitem{Distributions}{Ubuntu/Debian, Red Hat/Fedora, Gentoo, NixOS, FreeBSD}
 
 %\subsection{Active Research}
 %\cvitem{PureScript}{Purely-functional programming language that compiles to JavaScript - it is based on Haskell, with improvements.}
