--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 % All information in this block is optional, comment out any lines you don't need
 \title{Curriculum Vit\ae}
 % \address{15208 W. Ellsworth Dr.}{Golden, Colorado 80401}
-\mobile{(303) 884 - 7762}
+% \mobile{(303) 884 - 7762}
 \email{athan.clark@gmail.com}
 \homepage{http://athanclark.github.io}{athanclark.github.io}
 
@@ -71,7 +71,7 @@ and amature computer scientist.
 Proficient in complexity management, rapid development, and verified correctness.
 Well versed multi-paradigm developer, with deep understanding of Functional Programming.
 
-\section{Authored Projects}
+\section{Projects}
 
 \definecolor{lightblue}{rgb}{0.22,0.45,0.70}
 
@@ -79,52 +79,34 @@ Well versed multi-paradigm developer, with deep understanding of Functional Prog
     Sinatra-style web application library.
     \hfill \textcolor{lightblue}{\href{https://nestedroutes.com}{nestedroutes.com}}
   }
+\cvitem{MoneyBit}{
+    A web application as a graphical user interface to the Monero cryptocurrency CLI client.
+    \hfill \textcolor{lightblue}{\href{http://moneybit.science}{moneybit.science}}
+  }
 \cvitem{\(\lambda\)text}{
     Command-line utility for general purpose templating.
     \hfill \textcolor{lightblue}{\href{http://ltext.github.io}{ltext.github.io}}
   }
-\cvitem{Time-Map}{
-    Time-indexed map data structure.
-    \hfill \textcolor{lightblue}{\href{https//github.com/athanclark/timemap}{github/timemap}}
-  }
-\cvitem{Pred-Trie}{
-    Look-up tables via predicates.
-    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/pred-trie}{hackage/pred-trie}}
-  }
-\cvitem{FrankenScript}{
-    JavaScript with strong typing and partial application.
-    \hfill \textcolor{lightblue}{\href{https://github.com/athanclark/frankenscript}{github/frankenscript}}
-  }
 \cvitem{Markup}{
     Generic programming for Html.
     \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/markup}{hackage/markup}}
-  }
-\cvitem{UrlPath}{
-    URL data type, specialized for app deployment.
-    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/urlpath}{hackage/urlpath}}
-  }
-\cvitem{WebPage}{
-    Web application scaffold, designed like WordPress.
-    \hfill \textcolor{lightblue}{\href{http://hackage.haskell.org/package/webpage}{hackage/webpage}}
   }
 
 % \pagebreak
 
 \section{Programming Languages}
 
-\cvitem{JavaScript}{jQuery, LoDash, Backbone, Browserify, Bower, Gulp}
-\cvitem{CSS}{Sass / Less / CSSModules, Bootstrap, Foundation, Semantic UI}
-\cvitem{PHP}{Symfony, Laravel, Composer, PEAR}
-\cvitem{Haskell}{Yesod, Scotty, Snap, Nested-Routes, Lens, Pandoc, HXT}
+\cvitem{JavaScript}{jQuery, LoDash, Browserify, Bower, Gulp}
+\cvitem{CSS}{Sass / Less / CSSModules, Bootstrap, Semantic UI}
+\cvitem{Haskell}{ekg, stack, WAI, pipes, strictness}
 
 \pagebreak
 
 \section{Technical Skills}
 
 \subsection{Principals}
-\cvitem{Assurance}{Unit and Automated Testing, Property Establishment, Absolute Correctness, Isolation, Reproducible Development - Docker, Nix}
+\cvitem{Assurance}{Unit and Automated Testing, Property Establishment, Correctness, Reproducible Development}
 \cvitem{Performance}{Profiling, Complexity, Asymptotic Analysis, Web Developer Tools}
-\cvitem{Availability}{Browser-Bug Compensation, Backward and Forward Compatibility, Search Engine Optimization}
 \cvitem{Code Clarity}{Semantic Design, Loose Coupling, Design Patterns}
 
 %\subsection{Development}
@@ -139,27 +121,11 @@ Well versed multi-paradigm developer, with deep understanding of Functional Prog
 
 \section{Past Positions}
 \cvitem{FP Complete\\\textbf{\footnotesize 9/15 - 11/15}}{
-Added a generic, yet semantically pure security system for nested-routes; simple
-authentication-role based declarations, with the capacity to integrate into any
-existing security system.
-}
-\cvitem{American Financing\\\textbf{\footnotesize 11/14 - 1/15}}{
-Upgraded legacy PHP and Ruby codebase to a Haskell web application -
-a mirror image of the previous (with improvements to the HTML),
-while compensating for historic URLs for SEO.
-}
-\cvitem{Peerless Network\\\textbf{\footnotesize 11/13 - 5/14}}{
-Developed command-line applications for Network Operations Center to maximize
-throughput of their help-desk.
-}
-\cvitem{Kifaru Outdoors\\\textbf{\footnotesize 10/13 - 11/13}}{
-Emergency web application - an iTunes clone for smart-phones, accessible from the wifi -
-allow control of the song playing remotely throughout the building.
+Added a generic, yet simple security system for nested-routes;
+authentication-roles based on user-defined types.
 }
 
 \section{References}
-
-% Please contact me for references.
 
 \center{
 %\begin{multicols}{2}
